--- a/notebook2/notebook/static/styles/pages/login.scss
+++ b/notebook2/notebook/static/styles/pages/login.scss
@@ -18,9 +18,9 @@
           width: 100%;
           width: 215px;
         }
-      }
-      #separator {
-        margin: 0 $margin;
+        #separator {
+          margin: auto $margin;
+        }
       }
     }
   }
