--- a/notebook2/notebook/templates/header.html
+++ b/notebook2/notebook/templates/header.html
@@ -9,13 +9,15 @@
 
   <div id="profile-divider"></div>
 
-  {% if user in session %}
+  {% if session['user'] %}
       <a class='link-button'  href="/user">
-        <b>{auth.user!.given_name}</b>
+        <b>{{ session['user']['name'] }}</b>
       </a>
-    <a class='link-button' href="/logout">
-      Log out
-    </a>
+    <form action='/logout' method='POST'>
+      <button class='link-button' type='submit'>
+        Log out
+      </button>
+    </form>
   {% else %}
     <a class='link-button' href='/login'>
       Login
