--- a/notebook2/notebook/templates/index.html
+++ b/notebook2/notebook/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="{{ 'dark' if session['dark'] }}">
+<html lang="en" {{ 'class=dark' if session['dark'] }}>
   <head>
     <title>Hail Notebooks</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet"/>
